# Neko-Oracle-RWA

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
apps/aggregator/: .env.example  README.md  package.json
apps/aggregator/src/: app.module.ts
apps/aggregator/src/config/: redis.config.ts
apps/aggregator/src/interfaces/: normalized-price.interface.ts  normalizer.interface.ts  storage-options.interface.ts
apps/aggregator/src/metrics/: metrics.service.ts
apps/aggregator/src/modules/: storage.module.ts
apps/aggregator/src/normalizers/: base.normalizer.ts
apps/aggregator/src/services/: aggregation.service.ts  normalization.service.ts  storage.service.spec.ts  storage.service.ts
apps/api/src/: app.controller.spec.ts  app.service.spec.ts
apps/ingestor/: package.json
apps/ingestor/src/controllers/: prices.controller.ts
contracts/rwa-lending/: Cargo.toml  README.md
contracts/rwa-lending/src/: contract.rs  lib.rs
contracts/rwa-lending/src/admin/: mod.rs
contracts/rwa-lending/src/common/: error.rs  events.rs  mod.rs  storage.rs  types.rs
contracts/rwa-lending/src/operations/: backstop.rs  borrowing.rs  collateral.rs  interest.rs  lending.rs  liquidations.rs  mod.rs  oracles.rs
contracts/rwa-lending/src/test/: mod.rs
contracts/rwa-token/: Cargo.toml  README.md
contracts/rwa-token/src/: admin.rs  error.rs  events.rs  interfaces.rs  lib.rs  oracle.rs  storage.rs  test.rs  token.rs  types.rs
src/: check-env.ts  fetcher.ts  index.ts  publisher.ts  scheduler.ts
src/circuits/src/: main.nr
(+7 files in other folders)
